# pz-mod-checker

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.claude/: context.md  settings.json
.claude/rules/: code-architecture.md
.claude/skills/session-start/: SKILL.md
.claude/specs/: rule-schema.md
data/: no-comp.txt
data/rules/: 42.0.0.json  42.0.0.yaml  42.10.0.json  42.12.0.json  42.13.0.json  42.14.0.json  42.15.0.json  42.16.0.json  42.5.0.json  42.8.0.json  42.9.0.json  README.md
docs/: user-guide.md
pz_mod_checker/: __main__.py  bisect.py  cli.py  diagnose.py  manager.py  translate.py  workshop.py
pz_mod_checker/gui/: __init__.py  server.py
pz_mod_checker/gui/static/: index.html
pz_mod_checker/reporter/: __init__.py  cli.py
pz_mod_checker/rules/: __init__.py  engine.py  loader.py
pz_mod_checker/scanner/: lua_reader.py  mod_info.py
src/: __init__.py  __main__.py  cli.py
src/reporter/: cli.py  json_out.py
src/rules/: engine.py  loader.py  version.py
src/scanner/: __init__.py  discovery.py  lua_reader.py  mod_info.py
tests/: test_audit_fixes.py  test_rules.py  test_scanner.py  test_version.py
